added available_slots
