# slot_booking/api_specs/api_spec.json
@@ -63,18 +63,6 @@
         "washing_machine_image"
       ]
     },
-    "washing_machine":{
-      "type": "object",
-      "properties": {
-        "washing_mechine_id": {
-          "type": "integer",
-          "format": "int32"
-        }
-      },
-      "required": [
-        "washing_mechine_id"
-      ]
-    },
     "list_of_machine_details": {
       "type": "object",
       "properties": {
@@ -218,9 +206,27 @@
        "machine_id",
        "is_resolved"
       ]
+    },
+    "issue_to_be_reported":{
+      "type": "object",
+      "properties": {
+        "issue":{
+          "type": "string"
+        }
+      },
+      "required":[
+        "issue"
+      ]
     }
   },
   "parameters": {
+    "CreateAnissue":{
+      "name": "issue",
+      "in": "body",
+      "schema": {
+        "$ref": "#/definitions/issue_to_be_reported"
+      }
+    },
     "UserdetailsParameter": {
       "name": "user_details",
       "in": "body",
@@ -248,6 +254,13 @@
       "schema":{
         "$ref": "#/definitions/resolved_status"
       }
+    },
+    "CreateWashingMachineSlotDetails":{
+      "name": "Washing_machine_slot_details",
+      "in": "body",
+      "schema":{
+        "$ref":"#/definitions/washing_machine_slot_details"
+      }
     }
   },
   "responses": {
@@ -258,10 +271,14 @@
         "properties": {
           "access_token": {
             "type": "string"
+          },
+          "role":{
+            "type": "string"
           }
         },
         "required": [
-          "access_token"
+          "access_token",
+          "role"
         ]
       }
     },
@@ -363,7 +380,28 @@
         }
       }
     },
-    "/get/washing_machine_slot_details/{washing_machine_id}/{day}":{
+    "/create/washing_machine_slot_details/":{
+      "post":{
+        "operationId": "Create_Washing_Machine_Slot_Details",
+        "description": "create washing machine slots details",
+         "security": [{
+          "oauth": [
+            "write"
+          ]
+        }],
+        "parameters":[
+          {
+            "$ref":"#/parameters/CreateWashingMachineSlotDetails"
+          }
+        ],
+        "responses":{
+          "200":{
+            "description": "Successfully Created"
+          }
+        }
+      }
+    },
+    "/get/washing_machine_slot_details/{washing_machine_id}/{day}/":{
       "get":{
         "operationId": "Get_Washing_Machine_Slot_Details",
         "description": "Get all washing machine slots details",
@@ -446,6 +484,25 @@
         "responses":{
           "200":{
             "description": ""
+          }
+        }
+      }
+    },
+    "/report/issue/":{
+      "post":{
+        "operationId":"Create_an_Issue",
+        "description": "Create an issue",
+        "parameters": [
+          {
+            "$ref": "#/parameters/CreateAnissue"
+          }
+        ],
+        "responses":{
+          "200":{
+            "description": "successfully created"
+          },
+          "400":{
+            "description": "Invalid Entry"
           }
         }
       }
